--- a/Practice7_6_3/style.css
+++ b/Practice7_6_3/style.css
@@ -3,7 +3,7 @@ body {
     background-color: #dddddd;
 }
 
-h1 {
+#student-list-container {
     text-align: center;
 }
 
@@ -12,7 +12,7 @@ ul {
     padding: 0;
     display: grid;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: -10px;
 }
 
 .student-card {
@@ -23,7 +23,7 @@ ul {
     width: 200px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
-    text-align: center;
+
 }
 
 .student-card h2 {
